# kafka-site-monitoring

./: docker-compose.yml  kafka.yml  run_all_tests.sh  techstack.md  techstack.yml
srv/database-writer/: pyproject.toml
srv/database-writer/src/app/: main.py
srv/database-writer/src/app/routers/: consumer.py  heartbeat.py
srv/database-writer/src/tests/: test_heartbeat.py
srv/db/: Dockerfile  create.sql
srv/kafka/: docker-compose.yml
srv/monitoring-writer/: Dockerfile  pyproject.toml
srv/monitoring-writer/src/app/: consumer.py  db.py  main.py  reload.py
srv/monitoring-writer/src/sitemonitor/: consumer.py  db.py  main.py  reload.py  settings.py
srv/monitoring-writer/src/tests/: test_db.py
srv/website-checker/: Dockerfile  entrypoint.sh  install_packages.sh  pyproject.toml
srv/website-checker/checkerapi/src/checkerapi/: models.py
srv/website-checker/checkerapi/src/checkerapi/routers/: checker.py
srv/website-checker/checkerapi/src/checkerapi/tests/: conftest.py
srv/website-checker/sitechecker/: README.md  setup.py
srv/website-checker/sitechecker/sitechecker/: checker.py  main.py  sender.py
srv/website-checker/sitechecker/sitechecker/tests/: test_checker.py
srv/website-checker/src/app/: checker.py  main.py  models.py  sender.py
srv/website-checker/src/app/routers/: checker.py  models.py
srv/website-checker/src/app/tests/: conftest.py  test_checker.py  test_checker_api.py  test_heartbeat.py
srv/website-checker/src/tests/: conftest.py  test_checker.py  test_checker_api.py
