[tool.poetry]
name = "aws-simple-api"
version = "0.1.0"
description = "AWS Simple API"
authors = ["Andrew Yourkin <andrew@yourkin.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mypy = "^0.9.1"
pytest-flake8 = "^1.1.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
